# hermes-omnivoice

./: README.md  __init__.py  plugin.yaml  pyproject.toml
hermes_omnivoice/: __init__.py  cli.py  provider.py
tests/: test_provider_helpers.py
